Fix layout issue in redemption form

--- a/support-frontend/assets/components/subscriptionCheckouts/layout.module.scss
+++ b/support-frontend/assets/components/subscriptionCheckouts/layout.module.scss
@@ -9,6 +9,14 @@
 
 .root {
   max-width: gu-span(14) + $gu-h-spacing;
+  @include mq($from:tablet) {
+    display: flex;
+    align-items: flex-start;
+  }
+  .form {
+    flex: 0 0 auto;
+    width: 100%;
+  }
 }
 
 .form {
@@ -21,16 +29,12 @@
   }
 }
 
-.withAside {
-  @include mq($from:tablet) {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: flex-start;
-  }
-  .form {
-    flex: 0 0 auto;
-    width: 100%;
-  }
+.asideTop {
+  flex-direction: row-reverse;
+}
+
+.asideBottom {
+  flex-direction: row;
 }
 
 .sticky {
